--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,103 +1,96 @@
 name: eShopOnWeb Build and Test
 
-#Triggers (uncomment line below to use it)
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
 
-#Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb
+  RESOURCE_GROUP: rg-eshoponweb
   LOCATION: southeastasia
-  TEMPLATE-FILE: infra/webapp.bicep
-  SUBSCRIPTION-ID: da5865a2-0c39-4de2-9cbf-702a94836f18
-  WEBAPP-NAME: eshoponweb
+  TEMPLATE_FILE: infra/webapp.bicep
+  SUBSCRIPTION_ID: da5865a2-0c39-4de2-9cbf-702a94836f18
+  WEBAPP_NAME: eshoponweb-vijay-58910913
 
 jobs:
-  #Build, test and publish .net web project in repository
   buildandtest:
     runs-on: ubuntu-latest
     steps:
-      #checkout the repository
-      - uses: actions/checkout@v5
-      #prepare runner for desired .net version SDK
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup .NET
-        uses: actions/setup-dotnet@v5
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "8.0.x"
-          dotnet-quality: "preview"
-      #Build/Test/Publish the .net project
+
       - name: Build with dotnet
         run: dotnet build ./eShopOnWeb.sln --configuration Release
+
       - name: Test with dotnet
         run: dotnet test ./eShopOnWeb.sln --configuration Release
-      - name: dotnet publish
-        run: |
-          dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
-          cd ${{env.DOTNET_ROOT}}/myapp
-          zip -r ../app.zip .
-      # upload the published website code artifacts
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v5
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/app.zip
 
-      # upload the bicep template as artifacts for next job
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v5
+      - name: Publish and zip website
+        run: |
+          dotnet publish ./src/Web/Web.csproj -c Release -o ./publish
+          cd publish
+          zip -r ../app.zip .
+          cd ..
+
+      # Copy Bicep file to root so artifact path is predictable
+      - name: Prepare Bicep template
+        run: cp ${{ env.TEMPLATE_FILE }} ./webapp.bicep
+
+      - name: Upload website artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dotnet-app
+          path: app.zip
+
+      - name: Upload bicep template artifact
+        uses: actions/upload-artifact@v4
         with:
           name: bicep-template
-          path: ${{ env.TEMPLATE-FILE }}
+          path: webapp.bicep
 
-  # Use Bicep to deploy infrastructure + Publish webapp
   deploy:
     runs-on: ubuntu-latest
     needs: buildandtest
     environment:
-      name: "Development"
+      name: Development
     steps:
-      #Download the publish files created in previous job
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v6
+      - name: Download website artifact
+        uses: actions/download-artifact@v4
         with:
-          name: .net-app
-          path: .net-app
+          name: dotnet-app
+          path: dotnet-app
 
-      #Download the bicep templates from previous job
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v6
+      - name: Download bicep template artifact
+        uses: actions/download-artifact@v4
         with:
           name: bicep-template
           path: bicep-template
 
-      #Login in your azure subscription using a service principal (credentials stored as GitHub Secret in repo)
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Deploy Azure WebApp using Bicep file
-      - name: deploy
+      - name: Deploy infrastructure (Bicep)
         uses: azure/arm-deploy@v2
         with:
-          subscriptionId: ${{ env.SUBSCRIPTION-ID }}
-          resourceGroupName: ${{ env.RESOURCE-GROUP }}
+          subscriptionId: ${{ env.SUBSCRIPTION_ID }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP }}
           template: bicep-template/webapp.bicep
-          parameters: "webAppName=${{ env.WEBAPP-NAME }} location=${{ env.LOCATION }}"
+          parameters: webAppName=${{ env.WEBAPP_NAME }} location=${{ env.LOCATION }}
           failOnStdErr: false
 
-      # Publish website to Azure App Service (WebApp)
-      # Step disabled due to issue where the site sometimes can't be found: https://github.com/microsoft/pipelines-appservice-lib/issues/56. Instead deploy using CLI
-      - name: Publish Website to WebApp
-        if: false #Disable step due to comment above
-        uses: Azure/webapps-deploy@v3
-        with:
-          type: ZIP
-          app-name: ${{ env.WEBAPP-NAME  }}
-          package: .net-app/app.zip
-
-      # Publish website to Azure App Service using CLI (WebApp)
-      - name: Publish Website to WebApp
-        uses: Azure/cli@v2
+      - name: Publish Website to WebApp (CLI)
+        uses: azure/cli@v2
         with:
           inlineScript: |
-            az webapp deploy --name ${{ env.WEBAPP-NAME }} --resource-group ${{ env.RESOURCE-GROUP }} --src-path .net-app/app.zip --type zip
+            az webapp deploy \
+              --name ${{ env.WEBAPP_NAME }} \
+              --resource-group ${{ env.RESOURCE_GROUP }} \
+              --src-path dotnet-app/app.zip \
+              --type zip
